# airpods-cli

./: Cargo.toml  README.md  install.sh
src/: airpods.rs  main.rs  ui.rs
